// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileTree with data 1`] = `
<div
  className="filetree-container"
>
  <ul
    className="css-1fcb9io"
  >
    <li
      className="css-79elbk"
    >
      <div
        onClick={[Function]}
        style={
          {
            "borderRadius": "5px",
            "cursor": "pointer",
            "display": "flex",
            "padding": "0px 5px",
            "position": "relative",
            "width": "fit-content",
          }
        }
      >
        <div
          className="css-1abq8k5"
        >
          <div
            className="css-pnahsx"
          >
            <svg
              height={10}
              width={10}
            >
              <polygon
                className="css-1gdmwl6"
                points="0,0 0,10 10,5"
              />
            </svg>
          </div>
        </div>
        <span
          className="filetree-checkbox-container active"
        >
          <div
            className="checkbox"
          >
            <label>
              <input
                checked={false}
                className=""
                disabled={false}
                id="filetree-check-root"
                name="root"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
            </label>
          </div>
          <div
            style={
              {
                "color": "#333",
                "display": "inline-block",
                "verticalAlign": "top",
              }
            }
          >
            <div>
              <div
                className="filetree-resource-row"
                style={
                  {
                    "lineHeight": "24px",
                    "verticalAlign": "middle",
                  }
                }
                title="root"
              >
                <span
                  className="filetree-folder-icon fa fa-folder-open"
                />
                <div
                  className="filetree-directory-name"
                >
                  root
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
      <div>
        <ul
          className="css-1s1o8u8"
        >
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                  "width": "fit-content",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-1gdmwl6"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label>
                    <input
                      checked={false}
                      className=""
                      disabled={false}
                      id="filetree-check-root|parent1"
                      name="root|parent1"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </label>
                </div>
                <div
                  style={
                    {
                      "color": "#333",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="parent1"
                    >
                      <span
                        className="filetree-folder-icon fa fa-folder"
                      />
                      <div
                        className="filetree-directory-name"
                      >
                        parent1
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                  "width": "fit-content",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-1gdmwl6"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label>
                    <input
                      checked={false}
                      className=""
                      disabled={false}
                      id="filetree-check-root|loading parent"
                      name="root|loading parent"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </label>
                </div>
                <div
                  style={
                    {
                      "color": "#333",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="loading parent"
                    >
                      <span
                        className="filetree-folder-icon fa fa-folder"
                      />
                      <div
                        className="filetree-directory-name"
                      >
                        loading parent
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                  "width": "fit-content",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-1gdmwl6"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label>
                    <input
                      checked={false}
                      className=""
                      disabled={false}
                      id="filetree-check-root|parent2"
                      name="root|parent2"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </label>
                </div>
                <div
                  style={
                    {
                      "color": "#333",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="parent2"
                    >
                      <span
                        className="filetree-folder-icon fa fa-folder"
                      />
                      <div
                        className="filetree-directory-name"
                      >
                        parent2
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                  "width": "fit-content",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-1gdmwl6"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label>
                    <input
                      checked={false}
                      className=""
                      disabled={false}
                      id="filetree-check-root|empty directory"
                      name="root|empty directory"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </label>
                </div>
                <div
                  style={
                    {
                      "color": "#333",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="empty directory"
                    >
                      <span
                        className="filetree-folder-icon fa fa-folder"
                      />
                      <div
                        className="filetree-directory-name"
                      >
                        empty directory
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;

exports[`FileTree with data allowMultiSelect false 1`] = `
<div
  className="filetree-container"
>
  <ul
    className="css-1fcb9io"
  >
    <li
      className="css-79elbk"
    >
      <div
        onClick={[Function]}
        style={
          {
            "borderRadius": "5px",
            "cursor": "pointer",
            "display": "flex",
            "padding": "0px 5px",
            "position": "relative",
            "width": "fit-content",
          }
        }
      >
        <div
          className="css-1abq8k5"
        >
          <div
            className="css-pnahsx"
          >
            <svg
              height={10}
              width={10}
            >
              <polygon
                className="css-1gdmwl6"
                points="0,0 0,10 10,5"
              />
            </svg>
          </div>
        </div>
        <span
          className="filetree-checkbox-container active"
        >
          <div
            style={
              {
                "color": "#333",
                "display": "inline-block",
                "verticalAlign": "top",
              }
            }
          >
            <div
              className="lk-text-theme-dark filetree-node-active"
            >
              <div
                className="filetree-resource-row"
                style={
                  {
                    "lineHeight": "24px",
                    "verticalAlign": "middle",
                  }
                }
                title="root"
              >
                <span
                  className="filetree-folder-icon fa fa-folder-open"
                />
                <div
                  className="filetree-directory-name"
                >
                  root
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
      <div>
        <ul
          className="css-1s1o8u8"
        >
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                  "width": "fit-content",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-1gdmwl6"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  style={
                    {
                      "color": "#333",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="parent1"
                    >
                      <span
                        className="filetree-folder-icon fa fa-folder"
                      />
                      <div
                        className="filetree-directory-name"
                      >
                        parent1
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                  "width": "fit-content",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-1gdmwl6"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  style={
                    {
                      "color": "#333",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="loading parent"
                    >
                      <span
                        className="filetree-folder-icon fa fa-folder"
                      />
                      <div
                        className="filetree-directory-name"
                      >
                        loading parent
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                  "width": "fit-content",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-1gdmwl6"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  style={
                    {
                      "color": "#333",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="parent2"
                    >
                      <span
                        className="filetree-folder-icon fa fa-folder"
                      />
                      <div
                        className="filetree-directory-name"
                      >
                        parent2
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                  "width": "fit-content",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-1gdmwl6"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  style={
                    {
                      "color": "#333",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="empty directory"
                    >
                      <span
                        className="filetree-folder-icon fa fa-folder"
                      />
                      <div
                        className="filetree-directory-name"
                      >
                        empty directory
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;
